added cart, templates and context processor cart

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -29,8 +29,16 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link position-relative" href="{% url 'cart:cart_detail' %}">
                             <i class="bi bi-cart3"></i> Корзина
+                            {% with total_items=cart|length %}
+                                {% if total_items > 0 %}
+                                    <span class="position-absolute top-0 start-100 translate-middle
+                                        badge rounded-pill bg-danger">
+                                        {{ total_items }}
+                                    </span>
+                                {% endif %}
+                            {% endwith %}
                         </a>
                     </li>
                 </ul>
